# spawn-zk-snarks

./: Cargo.toml  README.md
src/: keygen.rs  lib.rs  proof.rs  tests.rs  utils.rs
